<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_desc">"Simple, powerful, open-source SSH client."</string>
    <string name="ywb_help">"help"</string>
    <string name="ywb_openfileok">"file opend:"</string>
    <string name="ywb_opensaveok">"file saved:"</string>
    <string name="ywb_filedlg_home">"Home"</string>
    <string name="ywb_filedlg_back">"Back"</string>
    <string name="ywb_filedlg_ok">"OK"</string>
    <string name="ywb_filedlg_cancel">"Cancel"</string>
    <string name="ywb_filedlg_title">Choose file</string>
	<string name="ywb_filedlg_opentitle">"Open file from"</string>
	<string name="ywb_filedlg_savetitle">"Save file to"</string>
    <string name="ywb_opensavetip">"Please select file"</string>
    <string name="ywb_setperiod">"Send period(ms)"</string>
    <string name="ywb_setheight">"Send txt height"</string>
    <string name="ywb_setfontsize">"Send font size"</string>
    <string name="ywb_setenter">"Send CR/LF"</string>
    <string name="ywb_settype">"Send type"</string>
    <string name="ywb_settype1">"txt"</string>
    <string name="ywb_settype2">"HEX"</string>
    <string name="ywb_settype3">"Tcl"</string>
    <string name="ywb_setloop">"Loop mode"</string>
    <string name="ywb_setloop1">"Send Once"</string>
    <string name="ywb_setloop2">"Loop"</string>
    <string name="ywb_setlocation">"Send type"</string>
    <string name="ywb_setlocation1">"Top"</string>
    <string name="ywb_setlocation2">"Bottom"</string>
    <string name="ywb_autosave">"Autosave"</string>
    <string name="ywb_autosavedir">"Autosave dirctory"</string>
    <string name="ywb_autosavehint">"Auto record info when connect"</string>
    <string name="ywb_networkinfo">"Network Info:"</string>
    <string name="ywb_ipinfo">"IP Info:"</string>
	<string name="ywb_sendhint">"Input auto send text"</string>
	<string name="ywb_sendhexhint">"Input auto send Hex text(example: 3a 3b 0d 0a)"</string>
	<string name="ywb_nobluetooth">"The system have no bluetooth moudle"</string>
	<string name="ywb_buttontitle">"Define your button"</string>
	<string name="ywb_buttonedit">"Edit button"</string>
	<string name="ywb_buttondel">"Delete button"</string>
	<string name="ywb_buttonname">"Button name:"</string>
	<string name="ywb_buttontxt">"Send content:"</string>
	<string name="ywb_buttontype">"Send type:"</string>
	<string name="ywb_buttontype1">"Txt"</string>
	<string name="ywb_buttontype2">"Hex"</string>
	<string name="ywb_buttontype3">"Key"</string>
	<string name="ywb_buttontype3title">"Select Key:"</string>
	<string name="ywb_buttontype2title">"Send content(example:3a 4b 0d):"</string>
	<string name="ywb_sendline">"Send line"</string>
	<string name="ywb_noaddbutton">"sorry,you can't add new button"</string>
	<string name="ywb_updatetitle">"Update"</string>
	<string name="ywb_updating">"Updating"</string>
	<string name="ywb_tcp_ser_port">"Listen port:"</string>
	<string name="ywb_tcp_start">"Start"</string>
	<string name="ywb_tcp_stop">"Stop"</string>
	<string name="ywb_tcp_dis">"Clear"</string>
	<string name="ywb_tcp_list">"Connected list:"</string>
	<string name="ywb_cli_ip">"Server IP:"</string>
	<string name="ywb_cli_port">"Server Port:"</string>
	<string name="ywb_cli_connect">"Connect"</string>
	<string name="ywb_cli_disconnect">"Disconnect"</string>
	<string name="ywb_tcp_send">"Send"</string>
	<string name="ywb_udp_echo">"Echo"</string>
	<string name="ywb_pref_pgscreen">"Page up/down gesture"</string>
	<string name="ywb_pref_pgscreen_summary">"Swip the left of the screen to send page up/dn to terminal"</string>
	<string name="ywb_ping_hint">"Type host to ping"</string>
	<string name="ywb_ping">"Ping tool:"</string>
	<string name="service_desc">"Maintains SSH connections and loaded pubkeys"</string>
	<string name="title_hosts_list">"Hosts"</string>
	<string name="title_ipinfo">"IP info"</string>
	<string name="title_server">"Server"</string>
	<string name="title_pubkey_list">"Pubkeys"</string>
	<string name="title_port_forwards_list">"Port forwards"</string>
	<string name="title_host_editor">"Edit Host"</string>
	<string name="title_help">"Help"</string>
	<string name="title_colors">"Colors"</string>
	<string name="title_color_picker">"Pick a color"</string>
    <string name="ywb_connect">"Connect"</string>
    <string name="ywb_passwd">"OK"</string>
    <string name="ywb_sendtext">"Send txt"</string>
	<string name="ywb_scanblue">"Scanning bluetooth device..."</string>
	<string name="ywb_selectblue">"Please select blue device to connect:"</string>
	<string name="ywb_connectblueok">"bluetooth device connect ok!"</string>
	<string name="ywb_connectbluefail">"bluetooth device connect fail!"</string>
	<string name="resolve_connect">"Connect"</string>
	<string name="resolve_entropy">"Gather Entropy"</string>
	<string name="menu_insert">"Add Host"</string>
	<string name="menu_delete">"Delete Host"</string>
	<string name="menu_preferences">"Preferences"</string>
	<string name="help_intro">"Please select a topic below for more information on a particular subject."</string>
	<string name="help_about">"About IPOP"</string>
	<string name="help_keyboard">"Keyboard"</string>
	<string name="pubkey_generate">"Generate"</string>
	<string name="pubkey_import">"Import"</string>
	<string name="pubkey_delete">"Delete key"</string>
	<string name="pubkey_gather_entropy">"Gathering Entropy"</string>
	<string name="pubkey_touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
	<string name="pubkey_touch_hint">"In order to assure randomness during the key generation, move your finger randomly over the box below."</string>
	<string name="pubkey_generating">"Generating key pair..."</string>
	<string name="pubkey_copy_private">"Copy private key"</string>
	<string name="pubkey_copy_public">"Copy public key"</string>
	<string name="pubkey_list_empty">"Tap \"Menu\" to create"\n"or import key pairs."</string>
	<string name="pubkey_unknown_format">"Unknown format"</string>
	<string name="pubkey_change_password">"Change password"</string>
	<string name="pubkey_list_pick">"Pick from /sdcard"</string>
	<string name="pubkey_import_parse_problem">"Problem parsing imported private key"</string>
	<string name="pubkey_unlock">"Unlock key"</string>
	<string name="pubkey_failed_add">"Bad password for key '%1$s'. Authentication failed."</string>
	<string name="pubkey_memory_load">"Load into memory"</string>
	<string name="pubkey_memory_unload">"Unload from memory"</string>
	<string name="pubkey_load_on_start">"Load key on start"</string>
	<string name="pubkey_confirm_use">"Confirm before use"</string>
	<string name="portforward_list_empty">"Tap \"Menu\" to create"\n"port forwards."</string>
	<string name="portforward_edit">"Edit port forward"</string>
	<string name="portforward_delete">"Delete port forward"</string>
	<string name="prompt_nickname">"Nickname:"</string>
	<string name="prompt_nickname_hint_pubkey">"My work key"</string>
	<string name="prompt_source_port">"Source port:"</string>
	<string name="prompt_destination">"Destination:"</string>
	<string name="prompt_old_password">"Old password:"</string>
	<string name="prompt_password">"Password:"</string>
	<string name="prompt_again">"(again)"</string>
	<string name="prompt_type">"Type:"</string>
	<string name="prompt_password_can_be_blank">"Note: password can be blank"</string>
	<string name="prompt_bits">"Bits:"</string>
	<string name="prompt_pubkey_password">"Password for key '%1$s'"</string>
	<string name="prompt_allow_agent_to_use_key">"Allow remote host to"\n"use key '%1$s'?"</string>
	<string name="host_verification_failure_warning_header">"WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!"</string>
	<string name="host_verification_failure_warning">"IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!"\n"Someone could be eavesdropping on you right now (man-in-the-middle attack)!"\n"It is also possible that the host key has just been changed."</string>
	<string name="prompt_host_disconnected">"Host has disconnected."\n"Close session?"</string>
	<string name="prompt_continue_connecting">"Are you sure you want"\n"to continue connecting?"</string>
	<string name="host_authenticity_warning">"The authenticity of host '%1$s' can't be established."</string>
	<string name="host_fingerprint">"Host %1$s key fingerprint is %2$s"</string>
	<string name="alert_passwords_do_not_match_msg">"Passwords do not match!"</string>
	<string name="alert_wrong_password_msg">"Wrong password!"</string>
	<string name="alert_key_corrupted_msg">"Private key appears corrupt!"</string>
	<string name="alert_sdcard_absent">"SD card is not inserted!"</string>
	<string name="button_add">"Add"</string>
	<string name="button_change">"Change"</string>
	<string name="button_generate">"Generate Key"</string>
	<string name="button_resize">"Resize"</string>
	<string name="alert_disconnect_msg">"Connection Lost"</string>
	<string name="msg_copyright">"Copyright &#169; 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/"</string>
	<string name="pref_emulation_category">"Terminal emulation"</string>
	<string name="pref_emulation_title">"Emulation mode"</string>
	<string name="pref_emulation_summary">"Terminal emulation mode to use for PTY connections"</string>
	<string name="pref_scrollback_title">"Scrollback size"</string>
	<string name="pref_scrollback_summary">"Size of scrollback buffer to keep in memory for each console"</string>
	<string name="pref_ui_category">"User interface"</string>
	<string name="pref_rotation_title">"Rotation mode"</string>
	<string name="pref_rotation_summary">"How to change rotation when keyboard popped in/out"</string>
	<string name="pref_titlebarhide_title">"Autohide title bar"</string>
	<string name="pref_titlebarhide_summary">"Tap console to show title bar and access menu"</string>
	<string name="pref_fullscreen_title">"Full screen"</string>
	<string name="pref_fullscreen_summary">"Hide status bar while in console"</string>
	<string name="pref_keyboard_category">"Keyboard"</string>
	<string name="pref_shiftfkeys_title">"Shift+num are F-keys"</string>
	<string name="pref_shiftfkeys_summary">"On hardware keyboards, number keys send F1-F10 with shift"</string>
	<string name="pref_ctrlfkeys_title">"Ctrl+num are F-keys"</string>
	<string name="pref_ctrlfkeys_summary">"On software keyboards, number keys send F1-F10 with ctrl"</string>
	<string name="pref_volumefont_title">"Volume keys change font size"</string>
	<string name="pref_volumefont_summary">"Font size can also be changed in per-host settings"</string>
	<string name="pref_memkeys_title">"Remember keys in memory"</string>
	<string name="pref_memkeys_summary">"Keep unlocked keys in memory until backend service is terminated"</string>
	<string name="pref_conn_persist_title">"Persist connections"</string>
	<string name="pref_conn_persist_summary">"Force connections to stay connected while in background"</string>
	<string name="pref_keymode_title">"Directory shortcuts"</string>
	<string name="pref_keymode_summary">"Select how to use Alt for '/' and Shift for Tab"</string>
	<string name="pref_stickymodifiers_title">"Sticky modifiers"</string>
	<string name="pref_stickymodifiers_summary">"Modifier keys remain enabled until another key is pressed"</string>
	<string name="only_alt">"Only alt"</string>
	<string name="pref_camera_title">"Camera shortcut"</string>
	<string name="pref_camera_summary">"Select which shortcut to trigger when the camera button is pushed"</string>
	<string name="pref_keepalive_title">"Keep screen awake"</string>
	<string name="pref_keepalive_summary">"Prevent the screen from turning off when working in a console"</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
</resources>