<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="send_period"
        android:title="@string/ywb_setperiod"
        android:inputType="number"
        android:singleLine="true"
        android:defaultValue="1000"
        />
    <EditTextPreference
        android:key="send_height"
        android:title="@string/ywb_setheight"
        android:inputType="number"
        android:singleLine="true"
        android:defaultValue="300"
        />

    <ListPreference
        android:key="send_type"
        android:title="@string/ywb_settype"
        android:entries="@array/list_send_type"
        android:entryValues="@array/list_send_type_value"
        android:defaultValue="0"
        />
    <ListPreference
        android:key="send_enter"
        android:title="@string/ywb_setenter"
        android:entries="@array/list_send_enter"
        android:entryValues="@array/list_send_enter_value"
        android:defaultValue="0"
        />
    <EditTextPreference
        android:key="send_fontsize"
        android:title="@string/ywb_setfontsize"
        android:inputType="number"
        android:singleLine="true"
        android:defaultValue="25"
        />
    <ListPreference
        android:key="send_loop"
        android:title="@string/ywb_setloop"
        android:entries="@array/list_send_loop"
        android:entryValues="@array/list_send_loop_value"
        android:defaultValue="0"
        />
    <CheckBoxPreference
        android:key="send_autosave"
        android:title="@string/ywb_autosave"
        android:summary="@string/ywb_autosavehint"
        android:defaultValue="false"
        />
    <EditTextPreference
        android:key="send_autosavedir"
        android:title="@string/ywb_autosavedir"
        android:singleLine="true"
        />
</PreferenceScreen>