<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ywb_buttonname"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ywb_buttontype"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText4" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sendType"
        android:layout_below="@+id/textView3">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/buttontype1" android:text="@string/ywb_buttontype1" android:checked="true"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/buttontype2" android:text="@string/ywb_buttontype2"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/buttontype3" android:text="@string/ywb_buttontype3"></RadioButton>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ywb_buttontxt"
        android:id="@+id/textView5"
        android:layout_below="@+id/sendType" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView5" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/list_send_key"
        android:layout_below="@+id/textView5"
        android:visibility="invisible" />

</RelativeLayout>