<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ywb_networkinfo"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setbar_bg"
        android:id="@+id/editText"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true"
        android:editable="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ywb_ipinfo"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setbar_bg"
        android:id="@+id/editText2"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:maxLines="8"
        android:textIsSelectable="true"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ywb_ping"
        android:id="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/PingHost"
            android:layout_weight="1"
            android:hint="@string/ywb_ping_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ping"
            android:id="@+id/Ping" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/PingInfo"
        android:background="@drawable/setbar_bg"
        android:padding="5dp"
        android:minHeight="100dp"
        android:textSize="12dp"
        android:editable="false"
        android:textIsSelectable="true"
        android:gravity="top" />

</LinearLayout>